[gd_scene load_steps=4 format=3 uid="uid://d1qvh7ieaigeb"]

[ext_resource type="Script" path="res://application.gd" id="1_40j84"]
[ext_resource type="Script" path="res://sub_viewport.gd" id="1_dyn1o"]
[ext_resource type="PackedScene" uid="uid://kyawuc8xcho5" path="res://board.tscn" id="1_lw8qs"]

[node name="Application" type="Node2D"]
position = Vector2(99, 0)
script = ExtResource("1_40j84")

[node name="GUIcontainer" type="MarginContainer" parent="."]
offset_left = -98.0
offset_right = 544.0
offset_bottom = 509.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_right = 25

[node name="HBoxContainer" type="HBoxContainer" parent="GUIcontainer"]
layout_mode = 2

[node name="Control" type="Control" parent="GUIcontainer/HBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="GUIcontainer/HBoxContainer/Control"]
layout_mode = 0
offset_left = 127.0
offset_right = 639.0
offset_bottom = 512.0

[node name="SubViewport" type="SubViewport" parent="GUIcontainer/HBoxContainer/Control/SubViewportContainer"]
handle_input_locally = false
size_2d_override_stretch = true
render_target_update_mode = 4
script = ExtResource("1_dyn1o")
board_scene = ExtResource("1_lw8qs")

[node name="Control2" type="MarginContainer" parent="GUIcontainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 25

[node name="VBoxContainer" type="VBoxContainer" parent="GUIcontainer/HBoxContainer/Control2"]
layout_mode = 2

[node name="Heuristic" type="Button" parent="GUIcontainer/HBoxContainer/Control2/VBoxContainer"]
layout_mode = 2
text = "Heuristic"

[node name="UserInput" type="Button" parent="GUIcontainer/HBoxContainer/Control2/VBoxContainer"]
layout_mode = 2
text = "User Input
"

[node name="Reset" type="Button" parent="GUIcontainer/HBoxContainer/Control2/VBoxContainer"]
layout_mode = 2
text = "Reset
"

[connection signal="pressed" from="GUIcontainer/HBoxContainer/Control2/VBoxContainer/Heuristic" to="." method="_on_heuristic_pressed"]
[connection signal="pressed" from="GUIcontainer/HBoxContainer/Control2/VBoxContainer/UserInput" to="." method="_on_user_input_pressed"]
[connection signal="pressed" from="GUIcontainer/HBoxContainer/Control2/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
